fix header z-index order

--- a/minstrel/static/site.css
+++ b/minstrel/static/site.css
@@ -59,6 +59,7 @@ header {
     position: fixed;
     right: 0;
     top: 0;
+    z-index: 97;
 }
 
 main {padding: 6.5rem 1rem 5rem}
